main.css: fix replay width on smaller screens

--- a/python-lib/prologin/concours/stechec/static/css/main.css
+++ b/python-lib/prologin/concours/stechec/static/css/main.css
@@ -34,3 +34,7 @@ i.champ-status {
 .official-map {
     color: gold;
 }
+
+#replay * {
+    max-width: 100%;
+}
